add equip controller, service